src/Kube/service-clock.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serviceclock-backend-api
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: serviceclock-backend-api
  template:
    metadata:
      labels:
        app: serviceclock-backend-api
    spec:
      containers:
        - name: serviceclock-backend-api
          image: ${DOCKER_USERNAME}/serviceclock_backend_api:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5 
            periodSeconds: 10  
            failureThreshold: 3  
          livenessProbe: 
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5 
            periodSeconds: 20 
            failureThreshold: 3
