src/Kube/service-clock.service.yml
apiVersion: v1
kind: Service
metadata:
  name: serviceclock-backend-api
spec:
  selector:
    app: serviceclock-backend-api
  ports:
    - protocol: TCP
      port: 7267        
      targetPort: 8080
