src/Kube/service-clock.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
  labels:
    app: serviceclock-backend-api
  name: serviceclock-backend-api
  namespace: default
spec:
  rules:
  - host: serviceclock.${BASE_URL} 
    http:
      paths:
      - backend:
          service:
            name: serviceclock-backend-api
            port: 
              number: 7267 
        path: /
        pathType: Prefix  
  tls:
  - hosts:
    - serviceclock.${BASE_URL}
    secretName: serviceclock-com-tls
